<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="12dp"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgListAvatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="centerCrop"
        android:padding="2dp"/>

    <LinearLayout
        android:layout_marginStart="12dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvListName"
            android:text="@string/list_username"
            android:textSize="16sp"
            android:textColor="#1F2937"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvListLastMsg"
            android:text="@string/list_last_message"
            android:textColor="#6B7280"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvListTime"
        android:text="@string/list_time_example"
        android:textColor="#9CA3AF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
