<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical">

    <!-- Avatar -->
    <ImageView
        android:id="@+id/imgAvatarReq"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_user"
        android:layout_marginEnd="12dp"
        android:scaleType="centerCrop" />

    <!-- Name -->
    <TextView
        android:id="@+id/tvNameReq"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/request_user_name"
        android:textSize="16sp"
        android:textColor="#111827"
        android:layout_marginEnd="8dp" />

    <!-- Accept -->
    <TextView
        android:id="@+id/btnAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_accept"
        android:textColor="#FFFFFF"
        android:padding="8dp"
        android:textSize="14sp"
        android:background="#10B981"
        android:layout_marginEnd="8dp" />

    <!-- Reject -->
    <TextView
        android:id="@+id/btnReject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_reject"
        android:textColor="#FFFFFF"
        android:padding="8dp"
        android:textSize="14sp"
        android:background="#EF4444" />

</LinearLayout>
